update docker with volumes and health check
Signed-off-by: Shivam Upadhyay <shivam.upadhyay@codinova.com>

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings":{
-    "DefaultConnection":"Host=localhost;Database=practice_db;Username=postgres;Password=codinova1234"
+    "DefaultConnection":"Host=172.17.0.1;Port=5000;Database=practice_db;Username=postgres;Password=codinova1234"
   },
   "JWT":{
     "ValidAudience":"User",
-    "ValidIssuer":"https://localhost:7143",
+    "ValidIssuer":"https://localhost:5254",
     "Secret":"1235658822862shhhh"
   }
 }
