--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=codinova1234
+      - PGUSER=postgres
       - POSTGRES_DB=practice_db #optional (specify default database instead of $POSTGRES_DB)
     ports:
       - 5000:5432
@@ -39,7 +40,7 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready","-U","postgres", "-d", "practice_db"]
+      test: ["CMD-SHELL", "pg_isready", "-d", "practice_db"]
       interval: 30s
       timeout: 60s
       retries: 5
