publish docker image to hub
Signed-off-by: Shivam Upadhyay <shivam.upadhyay@codinova.com>

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings":{
-    "DefaultConnection":"Host=172.17.0.1;Port=5000;Database=practice_db;Username=postgres;Password=codinova1234"
+    "DefaultConnection":"Host=postgres_db;Port=5432;Database=practice_db;Username=postgres;Password=codinova1234"
   },
   "JWT":{
     "ValidAudience":"User",
